# Safe-Evaluator

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
evaluator/: __init__.py  constants.py  literal_parser.py  parser_grammer.gram  pipelines.py  types.py
evaluator/interpreter/: constants.py  diagnostics.py  parser_grammer.gram  stages.py  tables.py
evaluator/interpreter/stages/: base.py  constantfolder.py  evaluator.py  lexer.py  parser.py  typechecker.py
evaluator/protocols/: ipc.py  ipc_types.py  serialization.py
evaluator/sandbox/: base.py  os_orchester.py  unix_api.py  windows_api.py
evaluator/sandbox/workers/: build_safe.py  evaluate_safe.py
evaluator/tools/: other.py  unix_sandbox.py  windows_sandbox.py
evaluator/workers/: build_safe.py  evaluate_safe.py
tests/: test_completness.py  test_literal_parser.py  test_pipelines.py
tests/test_interpreter/: test_diagnostics.py  test_fuzzer.py  test_stages.py  utils.py
tests/test_interpreter/test_stages/: test_constantfolder.py  test_evaluator.py  test_executionbase.py  test_lexer.py  test_parser.py  test_typechecker.py
tests/test_ipc/: test_serialization.py
tests/test_tools/: test_other.py
