[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "Safe-Evaluator"
version = "0.1.0"
description = "Safer eval alternative for mathematical and logical operators"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
keywords = ["eval", "safer", "interpreter", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9"]

[tool.setuptools.packages.find]
where = ["."]