[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Safe-Evaluator"
version = "0.1.0"
description = "Safer eval alternative for mathematical and logical operators"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["eval", "safer", "interpreter", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9"]

[tool.setuptools.package-data]
"evaluator" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]